5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1721_3063.log
== TEST (2019-05-02 18:22:52) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
fator=float(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=fator<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=fator<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=fator<=8 and nome=="MALHA" and po>=50):
	print(fr2)
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    fr1= 30 * d - 20
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:24:51) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=fator<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=fator<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=fator<=8 and nome=="MALHA" and po>=50):
	print(fr2)
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if( 1<=fator<=8 and nome=="INTEIRA" and po>=200):
NameError: name 'fator' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:25:28) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="MALHA" and po>=50):
	print(fr2)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:25:41) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="MALHA" and po>=50):
	print(fr2)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.230866
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:20) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="MALHA" and po>=50):
	print(fr2)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:58) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nomex= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nomex=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nomex=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nomex=="MALHA" and po>=50):
	print(fr2)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:28:07) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))


fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="inteira" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="placa" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="malha" and po>=50):
	print(fr2)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:29) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nome= nome.Upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="MALHA" and po>=50):
	print(fr2)
elif(po<50):
	print("po insuficiente")
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome= nome.Upper()
AttributeError: 'str' object has no attribute 'Upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:58) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="MALHA" and po>=50):
	print(fr2)
elif(po<50):
	print("po insuficiente")
else:
	print("Entrada invalida")
-- OUTPUT:
po insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:31:28) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="MALHA" and po>=50):
	print(fr2)
elif(po<50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:31:42) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=float(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="MALHA" and po>=50):
	print(fr2)
elif(po<50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:32:08) 
-- CODE:
po=int(input("quantidade de pecas de ouro: "))
nome=input("nome da armadura: ")
d=int(input("fator de destreza: "))
nome= nome.upper()

fr1= 30 * d - 20
fr2= 15 * d - 1
fr3= 20 * d - 18

if( 1<=d<=8 and nome=="INTEIRA" and po>=200):
	print(fr1)
elif( 1<=d<=8 and nome=="PLACA" and po>=100):
	print(fr3)
elif( 1<=d<=8 and nome=="MALHA" and po>=50):
	print(fr2)
elif(po<50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.132158
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
